aded new things

--- a/Home.html
+++ b/Home.html
@@ -57,7 +57,15 @@
                       <a class="nav-link" href="Tnews.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="careers.html">Careers</a>
+                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown">Categories</a>
+                                <div class="dropdown-menu g  bg-black align-center">
+                                    <a class="dropdown-item on-white" href="#">Music Contents</a>
+                                    <a class="dropdown-item on-white" href="articles.html">Articles</a>
+                                    <a class="dropdown-item on-white" href="#">Vidos</a>
+                                    <a class="dropdown-item on-white" href="#">Songs</a>
+                                    <a class="dropdown-item on-white" href="#">Materials</a>
+                                    <a class="dropdown-item on-white" href="careers.html">Career</a>
+                                </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="songs.html">Playlist</a>
@@ -120,7 +128,7 @@
                     </div>
                     <div class="col-lg-6">
                         <p class="sect-t font-poppinslight fs--18 mrgt2 on-black">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                        <a href="#" class="t-btn mrgb1 ">Read more</a>
+                        <a href="#" class="t-btn mrgb1 "> Learn More</a>
                     </div>
                 </div>
             </div>
@@ -137,7 +145,7 @@
                             <div class="">
                                 <img src="assets/images/playlist/8.jpg" alt="" style="width:200px; height: 160px;" class=" iimg ui-rounded">
                             </div>
-                            <h4 class="font-poppinsregular tobee mrgt1">Music Content</h4>
+                            <h4 class="font-poppinsregular tobee mrgt1"><a href="#" class="ui--a on-white">Music Content</a></h4>
                             <p class="font-poppinslight topee fs--14">Lorem ipsum dolor sit amet, consectetur adipi-scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum sus-pendisse ultrices gravida. </p>
                         </div>
                     </div>
@@ -146,7 +154,7 @@
                             <div class="">
                                 <img src="assets/images/playlist/5.jpg" alt="" style="width:200px; height: 160px;" class=" iimg ui-rounded">
                             </div> 
-                            <h4 class=" section-titles font-poppinsregular tobee mrgt1">Music Materials</h4>
+                            <h4 class=" section-titles font-poppinsregular tobee mrgt1"><a href="#" class="ui--a  on-white">Music Materials</a></h4>
                             <p class="font-poppinslight topee fs--14">Donec in sodales dui, a blandit nunc. Pellen-tesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, portti-tor vitae efficitur non. </p>
                         </div>
                     </div>
@@ -155,7 +163,7 @@
                             <div class="">
                                 <img src="assets/images/playlist/4.jpg" alt="" style="width:200px; height: 160px;" class="iimg ui-rounded">
                             </div>
-                            <h4  class="font-poppinsregular tobee mrgt1">Music Informations</h4>
+                            <h4  class="font-poppinsregular tobee mrgt1"><a href="#" class="ui--a  on-white">Music Informations</a></h4>
                             <p class="font-poppinslight topee  fs--14">Ablandit nunc. Pellentesque id eros venenatis, sollicitudin neque sodales, vehicula nibh. Nam massa odio, porttitor vitae efficitur non, ultric-ies volutpat tellus. </p>
                         </div>
                     </div>
@@ -176,7 +184,7 @@
                     <div class="col-lg-6">
                         <p class="font-poppinslight on-black fs--18">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
                              accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                             <a href="#" class="t-btn mrgb1 ">Read more</a>
+                             <a href="#" class="t-btn mrgb1 ">Learn more</a>
                     </div>
                 </div>
                 <div class="row">
@@ -218,7 +226,7 @@
                     </div>
                     <div class="col-lg-6 mrgb2">
                         <p class="font-poppinslight fs--18 sect-t mrgt2 pdb">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a href="#" class="t-btn ">Read more</a>
+                        <a href="#" class="t-btn ">Continue here</a>
                     </div>
                 </div>
                 <div class="row mrgt1">
@@ -294,7 +302,7 @@
                                         <h2 class="font-poppinslight fs--15 mrgl8 on-white"></h2>
                                         <ul class="ui--a font-poppinslight">
                                             <li><a href="" class="inline-block">Our Story</a></li><br>
-                                            <li><a href="" class="inline-block">The music</a></li><br>
+                                            <li><a href="articles.html" class="inline-block">Artcles</a></li><br>
                                             <li><a href="" class="inline-block">History</a></li><br>
                                         </ul>
                                     </div>
@@ -306,7 +314,7 @@
 									<li><a href=""  class="inline-block">Music</a></li><br>
 									<li><a href="materials.html"  class="inline-block">Materials</a></li><br>
 									<li><a href="songs.html"  class="inline-block">Playlist</a></li><br>
-									<li><a href=""  class="inline-block">Footage</a></li><br>
+									<li><a href="careers.html"  class="inline-block">Careers</a></li><br>
 								</ul>
 							</div>
 						</div>
@@ -315,9 +323,9 @@
 								<h2 class="font-poppinslight mrgl8 fs--15 on-white"></h2>
 								<ul class="ui--a font-poppinslight">
 									<li><a href="" class="inline-block">Adverts</a></li><br>
-									<li><a href=""  class="inline-block">Product</a></li><br>
-									<li><a href=""  class="inline-block">Press</a></li><br>
-									<li><a href=""  class="inline-block">Contact</a></li><br>
+									<li><a href=""  class="inline-block">Videos</a></li><br>
+									<li><a href=""  class="inline-block">Contents</a></li><br>
+									<li><a href="contact.html"  class="inline-block">Contact</a></li><br>
 								</ul>
 							</div>
 						</div>
@@ -326,7 +334,7 @@
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="img/logo.png" alt="">
 					<div class="copyright">
-Copyright &copy; All rights reserved | The Music   <a href="My-Portfolio.html" target="_blank">Connect</a>
+Copyright &copy; All rights reserved | The Music   <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
 						<a href=""><i class="fe fe-instagram"></i></a>
@@ -395,6 +403,9 @@ $('.owl-carousel').owlCarousel({
     loop:true,
     margin:10,
     responsiveClass:true,
+    autoplay:true,
+    autoplayTimeout:3000,
+    autoplayHoverPause:true,
     responsive:{
         0:{
             items:1,
@@ -410,8 +421,15 @@ $('.owl-carousel').owlCarousel({
             loop:false
         }
     }
+    
 })
 
+$('.play').on('click',function(){
+    owl.trigger('play.owl.autoplay',[3000])
+})
+$('.stop').on('click',function(){
+    owl.trigger('stop.owl.autoplay')
+})
 
 </script>
 
