--- a/songs.html
+++ b/songs.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <!-- Bootstrap CSS -->
-    <title>Hello, world!</title>
+    <title>The music connect | Playlist</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/fonts/webfont/fonts.css">
@@ -46,8 +46,16 @@
                     <a class="nav-link" href="Tnews.html">Blog</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="careers.html">Careers</a>
-                  </li>
+                      <a class="nav-link dropdown-toggle" data-toggle="dropdown">Categories</a>
+                     <div class="dropdown-menu g  bg-black align-center">
+                         <a class="dropdown-item on-white" href="#">Music Contents</a>
+                         <a class="dropdown-item on-white" href="articles.html">Articles</a>
+                         <a class="dropdown-item on-white" href="#">Vidos</a>
+                         <a class="dropdown-item on-white" href="#">Songs</a>
+                         <a class="dropdown-item on-white" href="#">Materials</a>
+                         <a class="dropdown-item on-white" href="careers.html">Career</a>
+                     </div>
+                </li>
                   <li class="nav-item active">
                       <a class="nav-link " href="songs.html">Playlist</a>
                     </li>
@@ -203,40 +211,41 @@
   <!-- Return to Top -->
 <a href="javascript:" id="return-to-top" class=" arrow"><img src="assets/images/Untitled-1.png" class="arrow" alt=""></a>
 
+
 <!-- Footer  -->
-<footer class="bg-purplee pdt5 pdb5">
+<footer class="bg-black pdt5 pdb5">
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-6 col-lg-7 order-lg-2">
 					<div class="row">
 						<div class="col-sm-4">
-							<div class="footer ">
-								<h2 class="font-poppinslight fs--15 mrgl8 on-white">About us</h2>
-								<ul class="ui--a font-poppinslight">
-									<li><a href="" class="inline-block">Our Story</a></li><br>
-									<li><a href="" class="inline-block">The music</a></li><br>
-									<li><a href="" class="inline-block">History</a></li><br>
-								</ul>
-							</div>
+                                <div class="footer ">
+                                        <h2 class="font-poppinslight fs--15 mrgl8 on-white"></h2>
+                                        <ul class="ui--a font-poppinslight">
+                                            <li><a href="" class="inline-block">Our Story</a></li><br>
+                                            <li><a href="articles.html" class="inline-block">Artcles</a></li><br>
+                                            <li><a href="" class="inline-block">History</a></li><br>
+                                        </ul>
+                                    </div>
 						</div>
 						<div class="col-sm-4">
 							<div class="footer ">
-								<h2 class="font-poppinslight  mrgl8 fs--15 on-white">Products</h2>
+								<h2 class="font-poppinslight  mrgl8 fs--15 on-white"></h2>
 								<ul class="ui--a inline-block font-poppinslight">
-									<li><a href="contact.html"  class="inline-block">Music</a></li><br>
-									<li><a href=""  class="inline-block">Careers</a></li><br>
-									<li><a href=""  class="inline-block">platform</a></li><br>
-									<li><a href=""  class="inline-block">Footage</a></li><br>
+									<li><a href=""  class="inline-block">Music</a></li><br>
+									<li><a href="materials.html"  class="inline-block">Materials</a></li><br>
+									<li><a href="songs.html"  class="inline-block">Playlist</a></li><br>
+									<li><a href="careers.html"  class="inline-block">Careers</a></li><br>
 								</ul>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="footer">
-								<h2 class="font-poppinslight mrgl8 fs--15 on-white">Playlists</h2>
+								<h2 class="font-poppinslight mrgl8 fs--15 on-white"></h2>
 								<ul class="ui--a font-poppinslight">
-									<li><a href="Tnews.html" class="inline-block">News</a></li><br>
-									<li><a href="careers.html"  class="inline-block">Careers</a></li><br>
-									<li><a href=""  class="inline-block">Press</a></li><br>
+									<li><a href="" class="inline-block">Adverts</a></li><br>
+									<li><a href=""  class="inline-block">Videos</a></li><br>
+									<li><a href=""  class="inline-block">Contents</a></li><br>
 									<li><a href="contact.html"  class="inline-block">Contact</a></li><br>
 								</ul>
 							</div>
@@ -246,19 +255,18 @@
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="img/logo.png" alt="">
 					<div class="copyright">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | The Music <a href="#" target="_blank">Connect</a>
+Copyright &copy; All rights reserved | The Music   <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
-						<a href=""><i class="fa fa-instagram"></i></a>
-						<a href=""><i class="fa fa-pinterest"></i></a>
-						<a href=""><i class="fa fa-facebook"></i></a>
-						<a href=""><i class="fa fa-twitter"></i></a>
-						<a href=""><i class="fa fa-youtube"></i></a>
+						<a href=""><i class="fe fe-instagram"></i></a>
+						<a href=""><i class="fe fe-facebook"></i></a>
+						<a href=""><i class="fe fe-twitter"></i></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
