--- a/careers.html
+++ b/careers.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
     <!-- Bootstrap CSS -->
-    <title>The music Connect | News!</title>
+    <title>The music Connect | Careers</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="assets/fonts/webfont/fonts.css">
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-md-4 ftco-animate">
           <div class="blog align-self-stretch">
-            <a href="blog-single.html" class="block-20 rounded" style="background-image: url('assets/images/playlist/4.jpg');">
+            <a href="blog-single.html" class="block-20 bloggrounded" style="background-image: url('assets/images/playlist/4.jpg');">
             </a>
             <div class=" p-4">
                 <div class=" text meta mb-2">
@@ -202,6 +202,7 @@
 <!-- Return to Top -->
 <a href="javascript:" id="return-to-top" class=" arrow"><img src="assets/images/Untitled-1.png" class="arrow" alt=""></a>
 
+
 <!-- Footer  -->
 <footer class="bg-black pdt5 pdb5">
 		<div class="container">
@@ -209,33 +210,33 @@
 				<div class="col-xl-6 col-lg-7 order-lg-2">
 					<div class="row">
 						<div class="col-sm-4">
-							<div class="footer ">
-								<h2 class="font-poppinslight fs--15 mrgl8 on-white">About us</h2>
-								<ul class="ui--a font-poppinslight">
-									<li><a href="" class="inline-block">Our Story</a></li><br>
-									<li><a href="" class="inline-block">The music</a></li><br>
-									<li><a href="" class="inline-block">History</a></li><br>
-								</ul>
-							</div>
+                                <div class="footer ">
+                                        <h2 class="font-poppinslight fs--15 mrgl8 on-white"></h2>
+                                        <ul class="ui--a font-poppinslight">
+                                            <li><a href="" class="inline-block">Our Story</a></li><br>
+                                            <li><a href="articles.html" class="inline-block">Artcles</a></li><br>
+                                            <li><a href="" class="inline-block">History</a></li><br>
+                                        </ul>
+                                    </div>
 						</div>
 						<div class="col-sm-4">
 							<div class="footer ">
-								<h2 class="font-poppinslight  mrgl8 fs--15 on-white">Products</h2>
+								<h2 class="font-poppinslight  mrgl8 fs--15 on-white"></h2>
 								<ul class="ui--a inline-block font-poppinslight">
 									<li><a href=""  class="inline-block">Music</a></li><br>
+									<li><a href="materials.html"  class="inline-block">Materials</a></li><br>
+									<li><a href="songs.html"  class="inline-block">Playlist</a></li><br>
 									<li><a href="careers.html"  class="inline-block">Careers</a></li><br>
-									<li><a href=""  class="inline-block">platform</a></li><br>
-									<li><a href=""  class="inline-block">Footage</a></li><br>
 								</ul>
 							</div>
 						</div>
 						<div class="col-sm-4">
 							<div class="footer">
-								<h2 class="font-poppinslight mrgl8 fs--15 on-white">Playlists</h2>
+								<h2 class="font-poppinslight mrgl8 fs--15 on-white"></h2>
 								<ul class="ui--a font-poppinslight">
-									<li><a href="Tnews.html" class="inline-block">News</a></li><br>
-									<li><a href="careers.html"  class="inline-block">Careers</a></li><br>
-									<li><a href=""  class="inline-block">Press</a></li><br>
+									<li><a href="" class="inline-block">Adverts</a></li><br>
+									<li><a href=""  class="inline-block">Videos</a></li><br>
+									<li><a href=""  class="inline-block">Contents</a></li><br>
 									<li><a href="contact.html"  class="inline-block">Contact</a></li><br>
 								</ul>
 							</div>
@@ -245,19 +246,18 @@
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="img/logo.png" alt="">
 					<div class="copyright">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | The Music  <a href="#" target="_blank">Connect</a>
+Copyright &copy; All rights reserved | The Music   <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
-						<a href=""><i class="fa fa-instagram"></i></a>
-						<a href=""><i class="fa fa-pinterest"></i></a>
-						<a href=""><i class="fa fa-facebook"></i></a>
-						<a href=""><i class="fa fa-twitter"></i></a>
-						<a href=""><i class="fa fa-youtube"></i></a>
+						<a href=""><i class="fe fe-instagram"></i></a>
+						<a href=""><i class="fe fe-facebook"></i></a>
+						<a href=""><i class="fe fe-twitter"></i></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</footer>
+
 
 
     <!-- Optional JavaScript -->
