--- a/articles.html
+++ b/articles.html
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col-md-4 ftco-animate">
           <div class="blog align-self-stretch">
-            <a href="#" class="block-20  blogg rounded" style="background-image: url('assets/images/playlist/4.jpg');">
+            <a href="#" class="block-20  blogg rounded" style="background-image: url('assets/images/AA.jpg');">
             </a>
             <div class=" p-4">
                 <div class=" text meta mb-2">
@@ -105,7 +105,7 @@
         </div>
         <div class="col-md-4 d-flex ftco-animate">
           <div class="blog align-self-stretch">
-            <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/14.jpg');">
+            <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/13.jpg');">
             </a>
             <div class=" p-4">
               <div class="meta mb-2 text">
@@ -117,7 +117,7 @@
         </div>
         <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog align-self-stretch">
-                  <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/14.jpg');">
+                  <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/7.jpg');">
                   </a>
                   <div class=" p-4">
                     <div class="meta mb-2 text">
@@ -153,7 +153,7 @@
           </div>
         <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog align-self-stretch">
-                  <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/14.jpg');">
+                  <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/5.jpg');">
                   </a>
                   <div class=" p-4">
                     <div class="meta mb-2 text">
