--- a/Tnews.html
+++ b/Tnews.html
@@ -148,7 +148,7 @@
             </a>
             <div class=" p-4">
                 <div class=" text meta mb-2">
-                <h4 class="text-muted blt"><a href="#" class="on-black fs--20 font-poppinssemibold fs-- ui--a">Inteview with CGM members</a></h4>
+                <h4 class="text-muted blt"><a href="#" class="on-black  font-poppinssemibold  ui--a">Inteview with CGM members</a></h4>
               </div>
               <p class=" blp mgt1"><a href="#" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
             </div>
@@ -161,7 +161,7 @@
                   </a>
                   <div class=" p-4">
                     <div class="meta mb-2 text">
-                    <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold fs--20 ui--a">Latest development on Music concerts</a></h4>
+                    <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold ui--a">Latest development on Music concerts</a></h4>
                   </div>
                   <p class=" font-poppinslight  mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
                 </div>
@@ -173,7 +173,7 @@
             </a>
             <div class="p-4">
               <div class="meta mb-2 text">
-                <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold  fs--20 ui--a">CGM online concerts</a></h4>
+                <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold  ui--a">CGM online concerts</a></h4>
              </div>
             <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
           </div>
