--- a/careers.html
+++ b/careers.html
@@ -44,9 +44,17 @@
                   <li class="nav-item">
                     <a class="nav-link" href="Tnews.html">Blog</a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="careers.html">Careers</a>
-                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link dropdown-toggle" data-toggle="dropdown">Categories</a>
+                     <div class="dropdown-menu g  bg-black align-center">
+                         <a class="dropdown-item on-white" href="#">Music Contents</a>
+                         <a class="dropdown-item on-white" href="articles.html">Articles</a>
+                         <a class="dropdown-item on-white" href="#">Vidos</a>
+                         <a class="dropdown-item on-white" href="#">Songs</a>
+                         <a class="dropdown-item on-white" href="#">Materials</a>
+                         <a class="dropdown-item on-white" href="careers.html">Career</a>
+                     </div>
+                 </li>                 
                   <li class="nav-item">
                       <a class="nav-link" href="songs.html">Playlist</a>
                     </li>
