--- a/articles.html
+++ b/articles.html
@@ -151,6 +151,7 @@
             </div>
             </div>
           </div>
+
         <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog align-self-stretch">
                   <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/5.jpg');">
@@ -162,9 +163,59 @@
                   <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
                 </div>
                 </div>
-              </div>
+          </div>
 
+          <div class="col-md-4 d-flex ftco-animate">
+              <div class="blog align-self-stretch">
+                <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/2.jpg');">
+                </a>
+                <div class=" p-4">
+                  <div class="meta mb-2 text">
+                  <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">How listening to goodmusic can affect your life</a></h4>
+                </div>
+                <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+              </div>
+              </div>
+            </div>
+            <div class="col-md-4 d-flex ftco-animate">
+                <div class="blog align-self-stretch">
+                  <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/6.jpg');">
+                  </a>
+                  <div class=" p-4">
+                    <div class="meta mb-2 text">
+                    <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">Music theory learning tricks</a></h4>
+                  </div>
+                  <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                </div>
+                </div>
+              </div>
+              <div class="col-md-4 d-flex ftco-animate">
+                  <div class="blog align-self-stretch">
+                    <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/8.jpg');">
+                    </a>
+                    <div class=" p-4">
+                      <div class="meta mb-2 text">
+                      <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">How i became successful by David scoTt</a></h4>
+                    </div>
+                    <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                  </div>
+                  </div>
+                </div>
+                <div class="col-md-4 d-flex ftco-animate">
+                    <div class="blog align-self-stretch">
+                      <a href="#" class="block-20 blogg rounded" style="background-image: url('assets/images/playlist/1.jpg');">
+                      </a>
+                      <div class=" p-4">
+                        <div class="meta mb-2 text">
+                        <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">Giving your audience what they want</a></h4>
+                      </div>
+                      <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                    </div>
+                    </div>
+                  </div>
+      
       </div>
+      
       <div class="blog-pagination block-27 mrgb1 mrgt2 ui-text-center">
         <div class="block-27 blog ui--a">
           <ul class="blog ui--a">
