new file an changes

--- a/articles.html
+++ b/articles.html
@@ -99,7 +99,8 @@
                 <div class=" text meta mb-2">
                 <h4 class="text-muted blt"><a href="Greatsinger.html" class="on-black font-poppinssemibold fs-- ui--a">How to be a great singer?</a></h4>
               </div>
-              <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+              <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+              <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Okiri Gabiriel - MU Educator -</a></p>
             </div>
           </div>
         </div>
@@ -111,7 +112,8 @@
               <div class="meta mb-2 text">
               <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">How well do you know your sound?</a></h4>
             </div>
-            <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+            <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+            <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Isaac Oladokun - MU Educator -</a></p>
           </div>
           </div>
         </div>
@@ -123,7 +125,8 @@
                     <div class="meta mb-2 text">
                     <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">Music as a career</a></h4>
                   </div>
-                  <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                  <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+                  <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">David Jones - MU Busineess -</a></p>
                 </div>
                 </div>
               </div>
@@ -135,7 +138,8 @@
               <div class="meta mb-2 text">
                 <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">What can i always practice</a></h4>
              </div>
-            <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+             <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+             <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Stephen Taylor - MU Educator -</a></p>
           </div>
           </div>
         </div>
@@ -147,7 +151,8 @@
                 <div class="meta mb-2 text">
                 <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">How well do you know your ability?</a></h4>
               </div>
-              <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+              <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+              <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Isaac Olayniyi - MU Educator -</a></p>
             </div>
             </div>
           </div>
@@ -160,7 +165,8 @@
                     <div class="meta mb-2 text">
                     <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">Hear training ability</a></h4>
                   </div>
-                  <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                  <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+                  <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Aramowo Stephen- MU Educator -</a></p>
                 </div>
                 </div>
           </div>
@@ -173,7 +179,8 @@
                   <div class="meta mb-2 text">
                   <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">How listening to goodmusic can affect your life</a></h4>
                 </div>
-                <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+                <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Paul Samson - MU Educator -</a></p>
               </div>
               </div>
             </div>
@@ -185,7 +192,8 @@
                     <div class="meta mb-2 text">
                     <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">Music theory learning tricks</a></h4>
                   </div>
-                  <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                  <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+                  <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Paul Stone - MU Educator -</a></p>
                 </div>
                 </div>
               </div>
@@ -197,7 +205,8 @@
                       <div class="meta mb-2 text">
                       <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">How i became successful by David scoTt</a></h4>
                     </div>
-                    <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                    <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+                    <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Okiri Gabiriel - MU Educator -</a></p>
                   </div>
                   </div>
                 </div>
@@ -209,7 +218,8 @@
                         <div class="meta mb-2 text">
                         <h4 class="text-muted blt"><a href="#" class="on-black font-poppinssemibold ui--a">Giving your audience what they want</a></h4>
                       </div>
-                      <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+                      <p class=" blp mgt1"><a href="Greatsinger.html" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no. . .</a></p>
+                      <p class="blpp"><a href="Greatsinger.html" class="text-muted   font-poppinslight fs--14 ui--a blog">Okiri Gabiriel - MU Educator -</a></p>
                     </div>
                     </div>
                   </div>
