--- a/blogdetails.html
+++ b/blogdetails.html
@@ -92,18 +92,14 @@
 <div class="container mrgt2">
         <div class="row">
           <div class="col-lg-10 ftco-animate">
-                <h2 class="mb-3 mrgt1 font-poppinssemibold eduu mrgt2 mrgb1 fs--40">Inteview </h2>
+                <h2 class="mb-3 mrgt1 font-poppinssemibold edu mrgt2 mrgb1 fs--40">Inteview </h2>
           	<p>
               <img src="assets/images/Playlist/6.jpg" alt="" class="img-fluid">
             </p>
             <h2 class="mb-3 font-poppinssemibold edu fs-25">Inteview with Aramowo Stephen</h2>
             <p class="font-poppinslight fs--16">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
             <p  class="font-poppinslight fs--16">Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-            <h2 class="mb-3 mt-5 edu font-poppinssemibold fs--25">#2. Gettin to know him</h2>
             <p class="font-poppinsligh fs--14t">Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
-            <p>
-              <img src="assets/images/newnews/2.jpg" alt="" class="img-fluid">
-            </p>
             <p  class="font-poppinslight fs--16">Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
             <p  class="font-poppinslight fs--16">Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
             <p  class="font-poppinslight fs--16">Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
@@ -131,9 +127,9 @@
             </a>
             <div class=" p-4">
                 <div class=" text meta mb-2">
-                <h4 class="text-muted blt"><a href="#" class="on-black fs--20 font-poppinssemibold fs-- ui--a">Inteview with CGM members</a></h4>
+                <h4 class="text-muted blt"><a href="#" class="on-black  font-poppinssemibold  ui--a">Inteview with CGM members</a></h4>
               </div>
-              <p class=" blp mgt1"><a href="#" class="on-black   font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+              <p class=" blp mgt1"><a href="#" class="on-black   font-poppinslight  ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
             </div>
           </div>
         </div>
@@ -144,7 +140,7 @@
                   </a>
                   <div class=" p-4">
                     <div class="meta mb-2 text">
-                    <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold fs--20 ui--a">Latest development on Music concerts</a></h4>
+                    <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold  ui--a">Latest development on Music concerts</a></h4>
                   </div>
                   <p class=" font-poppinslight  mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
                 </div>
@@ -156,9 +152,9 @@
             </a>
             <div class="p-4">
               <div class="meta mb-2 text">
-                <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold  fs--20 ui--a">CGM online concerts</a></h4>
+                <h4 class="text-muted blt"><a href="#" class="text-muted font-poppinssemibold  ui--a">CGM online concerts</a></h4>
              </div>
-            <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight fs--14 ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
+            <p class=" mgt1 blp"><a href="#" class="on-black font-poppinslight  ui--a blog">Even the all-powerful Pointing has no control about the blind texts. . .</a></p>
           </div>
           </div>
         </div>
