--- a/Home.html
+++ b/Home.html
@@ -175,7 +175,7 @@
                   <div class="row">
                   <div class="col-md-4 ftco-animate">
                    <div class="blog align-self-stretch">
-                        <a href="blog-single.html" class="block-20  blogg rounded" style="background-image: url('assets/images/playlist/4.jpg');">
+                        <a href="#" class="block-20  blogg rounded" style="background-image: url('assets/images/playlist/4.jpg');">
                         </a>
                         <div class=" p-4">
                             <div class=" text meta mb-2">
@@ -187,7 +187,7 @@
                     </div>
                     <div class="col-md-4 ftco-animate">
                             <div class="blog align-self-stretch">
-                                 <a href="blog-single.html" class="block-20  blogg rounded" style="background-image: url('assets/images/playlist/12.jpg');">
+                                 <a href="#" class="block-20  blogg rounded" style="background-image: url('assets/images/playlist/12.jpg');">
                                  </a>
                                  <div class=" p-4">
                                      <div class=" text meta mb-2">
@@ -199,7 +199,7 @@
                     </div>
                              <div class="col-md-4 ftco-animate">
                                     <div class="blog align-self-stretch">
-                                         <a href="blog-single.html" class="block-20  blogg rounded" style="background-image: url('assets/images/playlist/5.jpg');">
+                                         <a href="#" class="block-20  blogg rounded" style="background-image: url('assets/images/playlist/5.jpg');">
                                          </a>
                                          <div class=" p-4">
                                              <div class=" text meta mb-2">
