--- a/Tnews.html
+++ b/Tnews.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/custom.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/fonts/font-awesome.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   </head>
@@ -23,9 +23,9 @@
 
       <header class="container-fluid  fixed-top bg-black">
           <div class="row">
-         <div class="col-6 lg-4 sm-2">
+         <div class="col-12 col-lg-12 col-sm-12">
          <div class="container">
-          <nav class="navbar navbar-expand-md  mrgb1 navbar-dark">
+          <nav class="navbar navbar-expand-md navclass mrgb1 navbar-dark">
             <!-- Toggler/collapsibe Button -->
              <!-- Collapse button -->
           <button class="navbar-toggler third-button animated-icon3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent20">
         
                 <!-- Links -->
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav nav-list">
                   <li class="nav-item">
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
                   </li>
@@ -243,9 +243,11 @@
 Copyright &copy; All rights reserved | The Music   <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
-						<a href=""><i class="fe fe-instagram"></i></a>
-						<a href=""><i class="fe fe-facebook"></i></a>
-						<a href=""><i class="fe fe-twitter"></i></a>
+						<a href="" class="social"><i class="fa fa-instagram"></i></a>
+						<a href=""><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-envelope-o"></i></a>
 					</div>
 				</div>
 			</div>
