--- a/About.html
+++ b/About.html
@@ -15,16 +15,16 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/custom.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/fonts/font-awesome.min.css">
 
 
   </head>
   <body class="">
       <header class="container-fluid fixed-top bg-black">
           <div class="row">
-         <div class="col-6 lg-4 sm-2">
+         <div class="col-12 col-lg-12 col-sm-12">
          <div class="container">
-          <nav class="navbar navbar-expand-md  mrgb1 navbar-dark">
+          <nav class="navbar navbar-expand-md navclass  mrgb1 navbar-dark">
             <!-- Toggler/collapsibe Button -->
              <!-- Collapse button -->
           <button class="navbar-toggler third-button animated-icon3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent20">
         
                 <!-- Links -->
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav nav-list">
                   <li class="nav-item ">
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
                   </li>
@@ -88,25 +88,7 @@
 
         <main>
            
-    <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-6 col-md-6">
-                  <div class="breadcrumb-option">
-                      <a href="#">Home</a>
-                      <span>About Us</span>
-                  </div>
-              </div>
-              <div class="col-lg-6 col-md-6 text-right">
-                  <div class="breadcrumb-text">
-                      <h3>About Us</h3>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </section>
-  <!-- Breadcrumb Section End -->
+   
 
   <!-- About Us Section Begin -->
   <section class="about-us-section spad">
@@ -114,7 +96,7 @@
           <div class="row">
               <div class="col-lg-6">
                   <div class="as-pic">
-                      <img src="assets/images/newnews/3.jpg"  class="img"alt="">
+                      <img src="assets/images/newnews/3.jpg"  class="image"alt="">
                   </div>
               </div>
               <div class="col-lg-6">
@@ -206,9 +188,11 @@
 Copyright &copy; All rights reserved | The Music   <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
-						<a href=""><i class="fe fe-instagram"></i></a>
-						<a href=""><i class="fe fe-facebook"></i></a>
-						<a href=""><i class="fe fe-twitter"></i></a>
+						<a href=""><i class="fa fa-instagram"></i></a>
+                        <a href=""><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-youtube-play"></i></a>
+                        <a href="#"><i class="fa fa-envelope-o"></i></a>
 					</div>
 				</div>
 			</div>
