--- a/Greatsinger.html
+++ b/Greatsinger.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="assets/css/custom.css">
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/fonts/font-awesome.min.css">
 
   </head>
   <body class="">
@@ -22,9 +22,9 @@
 
       <header class="container-fluid  fixed-top bg-black">
           <div class="row">
-         <div class="col-6 lg-4 sm-2">
+         <div class="col-12 col-lg-12 col-sm-12">
          <div class="container">
-          <nav class="navbar navbar-expand-md  mrgb1 navbar-dark">
+          <nav class="navbar navbar-expand-md  navclass mrgb1 navbar-dark">
             <!-- Toggler/collapsibe Button -->
              <!-- Collapse button -->
           <button class="navbar-toggler third-button animated-icon3" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent20">
         
                 <!-- Links -->
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav nav-list">
                   <li class="nav-item">
                     <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
                   </li>
@@ -96,7 +96,7 @@
                 <h5 class="font-poppinslight text-muted fs--12 writer "><b>By - Okiri Gabriel - MU Educator</b></h5>
                 <h5 class="font-poppinslight text-muted fs--12 date "><b>May 19, 2020</b></h5>
           	<p>
-              <img src="assets/images/AA.jpg" alt="" class="img-fluid">
+              <img src="assets/images/1.jpg" alt="" class="img-fluid">
             </p>
             <h2 class="mb-3 font-poppinssemibold  edu fs-25">How to be a great singer</h2>
             <p class="font-poppinslight fs--16">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
@@ -242,9 +242,11 @@
 Copyright &copy; All rights reserved | The Music   <a href="#" target="_blank">Connect</a>
 </div>
 					<div class="social-links">
-						<a href=""><i class="fe fe-instagram"></i></a>
-						<a href=""><i class="fe fe-facebook"></i></a>
-						<a href=""><i class="fe fe-twitter"></i></a>
+						<a href=""><i class="fa fa-instagram"></i></a>
+            <a href=""><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-envelope-o"></i></a>
 					</div>
 				</div>
 			</div>
